Update kr-gettingstarted.md
Former-commit-id: d62897e744035fda5423c2569c18457948926fe0